# cim-tools

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: coordinate.py
backend/app/core/: config.py
backend/app/services/: coordinate.py
frontend/: .eslintrc-auto-import.json  README.md  components.d.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/components/: CoordinateDisplay.vue  CoordinateInput.vue  CoordinateSystemSelector.vue  InfoPanel.vue  MapViewer.vue
frontend/src/components/ui/: Button.vue  Card.vue  Container.vue  Grid.vue  Input.vue  LanguageSwitcher.vue  ThemeSwitcher.vue  index.ts
frontend/src/locales/: en.json  index.ts  zh.json
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/stores/: coordinate.ts  theme.ts
frontend/src/utils/: coordinate.ts
frontend/src/views/: AboutView.vue  BatchTransformView.vue  HomeView.vue  SingleTransformView.vue
